--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ header {
     padding:0 20px;
     cursor: pointer;
     text-decoration: none;
+    color: rgba(0,0,0,.5) !important;
 }
 .header-tab-2 {
     margin: 0;
@@ -99,11 +100,11 @@ header {
     width: 100%;
     height: 100%;
     background: url("img/test.jpg") no-repeat top/ cover;
-    transition: all 0.3s;
+    transition: all 0.5s;
     position: absolute;
 }
 .cardImage-img:hover {
-    transform: scale(1.08);
+    transform: scale(1.1);
 }
 .readMore {
     width: 40px;
@@ -185,7 +186,7 @@ header {
     box-sizing: border-box;
     background-color: white;
     opacity : 0.9;
-    transition: opacity 0.5s;
+    transition: opacity 0.75s;
 }
 .control:hover {
     opacity: 1;
@@ -197,7 +198,10 @@ header {
     display: flex;
 }
 .sortBy > button {
+    min-width: 1px;
     flex: 1;
+    font-size: 0.88em;
+    padding: 0;
 }
 .boaCon {
     width: 100%;
@@ -211,6 +215,7 @@ header {
 .boaCon > ul > li {
     list-style: none;
     line-height: 37px;
+    font-size: .97em;
 }
 .nextPage {
     margin-top: 20px;
