--- a/main.css
+++ b/main.css
@@ -61,6 +61,7 @@ header {
 /* blogBody */
 .blogBody {
     color: gray;
+    margin-bottom: 80px;
 }
 .vBox {
     width: 90%;
@@ -176,6 +177,35 @@ header {
     font-size: 18px;
     color: palevioletred;
 }
+.page-navigator {
+    list-style: none;
+    margin: 20px auto;
+    margin-bottom: 0;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.page-navigator > li {
+    display: inline-block;
+    padding: 5px 15px;
+    margin: 0 4px;
+    border-radius: 5px;
+    font-size: 1em;
+    transition: all 0.5s;
+}
+.page-navigator > li:hover {
+    color: gray;
+    background: white;
+}
+.page-navigator > li:hover > a {
+    color: gray;
+}
+.page-navigator > li > a {
+    font-size: 1em;
+    color: white;
+    text-decoration: none;
+}
 /* blogControl */
 .control {
     width: 90%;
@@ -235,7 +265,6 @@ header {
 footer {
     width: 100%;
     height: 50px;
-    margin-top: 30px;
     position: fixed;
     background: white;
     bottom: 0;
