--- a/main.css
+++ b/main.css
@@ -179,8 +179,6 @@ header {
 }
 .page-navigator {
     list-style: none;
-    margin: 20px auto;
-    margin-bottom: 0;
     text-align: center;
     display: flex;
     align-items: center;
@@ -188,23 +186,35 @@ header {
 }
 .page-navigator > li {
     display: inline-block;
-    padding: 5px 15px;
+    padding: 5px 20px;
     margin: 0 4px;
     border-radius: 5px;
     font-size: 1em;
     transition: all 0.5s;
 }
-.page-navigator > li:hover {
-    color: gray;
-    background: white;
-}
-.page-navigator > li:hover > a {
-    color: gray;
+.next,.prev {
+    padding: 2px 20px !important;
 }
 .page-navigator > li > a {
     font-size: 1em;
-    color: white;
     text-decoration: none;
+    color: rgba(0,0,0,.5);
+}
+.nav-position {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+.nav {
+    background: hsla(0,0%,100%,.8);
+    box-shadow: 0 1px 2px rgba(0,0,0,.1);
+    display: inline-block;
+    border-radius: 3px;
+    transition: all 0.5s;
+}
+.nav:hover {
+    background: white;
 }
 /* blogControl */
 .control {
