--- a/main.css
+++ b/main.css
@@ -54,6 +54,19 @@ h1,h2,h3,h4,h5,h6 {
         border-radius: 0 !important;
         opacity: 1 !important;
     }
+    /* 文章卡片移动端适配 */
+    .pageTag {
+        display: block !important;
+    }
+    .pageTag > div {
+        width: 100% !important;
+    }
+    .hiddenSquare {
+        display: none !important;
+    }
+    .cardImage {
+        height: 150px !important;
+    }
 }
 
 /* header */
@@ -114,18 +127,28 @@ header {
     width: 90%;
     margin: 0 auto;
     background: white;
-    height: 200px;
+    min-height: 200px;
     margin-top: 30px;
     display: flex;
     overflow: hidden;
 }
 .pageTag > div {
-    flex: 1;
+    width: 50%;
+    min-height: 200px;
     position: relative;
+    display: inline-block;
 }
 .cardImage {
     overflow: hidden;
 }
+.cardContent {
+    background: white;
+    padding-bottom: 34px;
+    box-sizing: border-box;
+}.cardContent > .mdui-typo {
+     padding: 0 12px;
+     box-sizing: border-box;
+ }
 .cardImage-img {
     width: 100%;
     height: 100%;
@@ -182,7 +205,6 @@ header {
     bottom: 0;
     width: 100%;
     height: 34px;
-    background: white;
     padding: 0 12px;
     box-sizing: border-box;
 }
@@ -277,7 +299,7 @@ header {
 }
 .boaCon {
     width: 100%;
-    height: 148px;
+    max-height: 148px;
     letter-spacing: 1px;
     overflow: hidden;
 }
@@ -318,49 +340,12 @@ footer {
     opacity: 0;
 }
 
-/* newPageEdit */
-
-/*.newPageEdit {
-    min-height: 300px;
-    padding: 12px;
-    box-sizing: border-box;
-    padding-bottom: 30px;
-}
-.title-child {
-    width: 100%;
-    display: flex;
-    margin-bottom: 20px;
-}
-.title-child > div {
-    margin-right: 20px;
-    display: flex;
-}
-.addTag {
-    align-items: center;
-}
-.addTag button {
-    margin-right: 10px;
-}
-.addTag {
-    font-size: 19px;
-}
-.edit {
-    margin: 20px 0;
-    padding: 16px;
-    box-sizing: border-box;
-}
-.introduction {
-    min-height: 125px;
-}
-.pageEdit {
-    min-height: 500px;
-}*/
-
 /* PAGE */
 .pageBody {
     padding: 16px;
     min-height: 400px;
     position: relative;
+    background: white;
 }
 .pageHead {
     letter-spacing: 1px;
@@ -383,29 +368,16 @@ footer {
     font-size: 18px;
     margin-right: 3px;
 }
-.iLike {
-    position: absolute !important;
-    right: -25px;
-    top: 12px;
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
-    outline: none;
-    border: 5px solid white;
-    box-shadow: 0 3px 10px rgba(0,0,0,.22);
-}
-.iLike > i {
-    font-size: 30px;
-}
 .pageContent {
     padding: 0 35px;
 }
 .sibi {
-    margin-top: 20px;
+    margin: 20px 0;
     min-height: 200px;
     padding: 12px;
     box-sizing: border-box;
-    padding-bottom: 70px;
+    padding-bottom: 30px;
+    background: white;
 }
 .newBB > form {
     display: flex;
@@ -452,7 +424,7 @@ footer {
     min-width: 200px;
     height: 100px;
     position: absolute;
-    right: -200px;
+    right: -210px;
     padding-left: 12px;
     box-sizing: border-box;
 }
