--- a/main.css
+++ b/main.css
@@ -29,6 +29,11 @@ h1,h2,h3,h4,h5,h6 {
 .position-ab-right {
     right: 0;
 }
+.justCenter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 body {
     padding-top: 80px;
 }
@@ -43,6 +48,7 @@ header {
     background-color: hsla(0,0%,100%,.4);
     box-shadow: 0 1px 2px rgba(0,0,0,.1);
     padding: 0 30px;
+    z-index: 99;
 }
 #controlBtn {
     display: none;
@@ -134,7 +140,10 @@ header {
 .cardImage-img {
     width: 100%;
     height: 100%;
-    background: url("img/test.jpg") no-repeat center/ cover;
+    background: url("img/test.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     transition: all 0.5s;
     position: absolute;
 }
@@ -177,7 +186,7 @@ header {
     width: 0;
     height: 0;
     border-bottom: 200px solid white;
-    border-left: 70px solid transparent;
+    border-left: 50px solid transparent;
     border-right: 0 solid transparent;
     position: absolute;
     right: 0;
@@ -263,6 +272,63 @@ header {
     box-sizing: border-box;
     background-color: white;
 }
+
+/* 搜索样式重写 */
+.search {
+    width: 100%;
+    border-radius: 3px;
+    box-sizing: border-box;
+    position: relative;
+    margin-bottom: 10px;
+    overflow: hidden;
+}
+.searchBtn {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    z-index: 3;
+    cursor: pointer;
+}
+.searchInput {
+    width: 100%;
+    height: 40px;
+    padding-left: 50px;
+    box-sizing: border-box;
+    border: none;
+    color: gray;
+    font-size: 15px;
+    letter-spacing: 1px;
+    outline: none;
+    position: relative;
+    background: transparent;
+    z-index: 2;
+    opacity: 0;
+}
+.searchColor {
+    width: 0;
+    height: 40px;
+    background: rgba(0,0,0,.05);
+    position: absolute;
+    border-radius: 0 20px 20px 0;
+    z-index: 1;
+}
+.searchIN {
+    animation: scearchInfo 0.75s;
+    animation-fill-mode: forwards;
+}
+@keyframes scearchInfo {
+    0% {width: 0}
+    100% {width: 100%;border-radius: 5px}
+}
+.searchOut {
+    animation: scearchOut 0.75s;
+    animation-fill-mode: forwards;
+}
+@keyframes scearchOut {
+    0% {width: 100%;border-radius: 5px}
+    100% {width: 0;border-radius: 0 20px 20px 0;}
+}
+
 .control-border {
     margin: 8px 0 !important;
 }
@@ -302,7 +368,7 @@ header {
 }
 .boaCon {
     width: 100%;
-    max-height: 185x;
+    max-height: 185Px;
     letter-spacing: 1px;
     overflow: hidden;
 }
@@ -314,72 +380,33 @@ header {
     line-height: 37px;
     font-size: .97em;
 }
-.nextPage {
-    margin-top: 20px;
-    height: 30px;
-    line-height: 30px;
-    display: flex;
-    text-align: center;
-}
-.page-tag-switch {
-    width: 100%;
-    height: 190px;
+
+/* 最新文章 样式订正 */
+.nextNewPage {
+    width: 90%;
+    height: auto;
     position: relative;
-    margin: 0 auto;margin-top: 20px;
-    overflow: hidden;
-}
-.swBtn {
-    border: none;
-    outline: none;
-    background: rgba(0,0,0,.1);
-    height: 100%;
-    position: absolute;
-    z-index: 1;
-    color : white !important;
-}
-.swImg-arr {
-    height: 190px;
-    width: 500%;
-    position: relative;
-    right: 0;
-}
-.swImg-arr > a {
-    width: 20% !important;
-    height: 100%;
-    color: white !important;
-    display: inline-block;
-}
-.swImg {
-    position: relative;
-    font-size: 17px;
-    font-weight: 300;
-    letter-spacing: 1px;
-    top: 0;
-    background-image: url("img/test.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    z-index: 0;
-    line-height: 190px;
-    text-align: center;
-}
-.author {
-    width: 100%;
-    height: 30px;
-    line-height: 30px;
-    font-size: 14px;
-    right: 0;
-    position: absolute;
-    bottom: 0;
-    z-index: 999999;
-    text-align: center;
-}
-#pageNum {
-    width: 40%;
-}
-.changePageBtn {
-    width: 30%;
-}
+    margin: 0 auto;
+    margin-top: 24px;
+    border-bottom: 1px solid rgba(0,0,0,.15);
+    padding: 12px 18px;
+    box-sizing: border-box;
+    }.nextNewPage:after {
+         content: '';
+         width: 4px;
+         height: 50%;
+         position: absolute;
+         bottom: auto;
+         top: 0;
+         left: 0;
+         right: auto;
+         background: pink;
+     }.nextNewPage > a {
+               color: gray !important;
+           }.nextNewPageData > i {
+    font-size: 16px;
+                       }
+
 
 /* footer */
 footer {
@@ -387,6 +414,7 @@ footer {
     height: 50px;
     position: fixed;
     background: white;
+    color: rgba(0,0,0,.65);
     bottom: -50px;
     line-height: 50px;
     text-align: center;
@@ -407,6 +435,7 @@ footer {
 .pageHead {
     letter-spacing: 1px;
     padding: 0 20px;
+    height: auto;
 }
 .pageHead > span {
     float: right;
@@ -439,39 +468,83 @@ footer {
     min-height: 200px;
     padding: 12px;
     box-sizing: border-box;
-    padding-bottom: 30px;
+    padding-bottom: 70px;
     background: white;
     color: gray;
 }
-.newBB > form {
-    display: flex;
-    height: auto;
+.userIC {
+    width: 100%;
+    height: 42px;
+    margin-top: 10px;
 }
-.newBB > form > .newCom {
-    flex: 1;
+.getData-input {
+    position: relative;
+    margin-right: 30px;
+    margin-bottom: 12px;
+    height: 42px;
+    box-shadow: 0 0 3px rgba(0,0,0,.12);
 }
-.newBB > form > div > div {
-    margin: 0 30px;
+.getData-input:after {
+    content: '';
+    width: 10px;
+    text-align: center;
+    height: 10px;
+    border-radius: 50%;
+    background: pink;
+    letter-spacing: 2px;
+    position: absolute;
+    right: 5px;
+    top: 5px;
 }
-.userBB {
-    padding: 0 !important;
-    margin-top: 20px;
+#urls:after {
+    background: lightblue;
+}
+.getData-input > input,#content > textarea {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    background: transparent;
+    border: none;
+    outline: none;
+    padding: 0 12px;
+    letter-spacing: 1px;
+    font-size: 14px;
+    color: gray;
+}
+#content {
     min-height: 120px;
 }
-.userBB > .colorBar {
-    height: 3px;
+#content > textarea {
+    padding: 12px;
+    resize: none;
+    font-size: 14px;
+    font-family: inherit;
+    letter-spacing: 1px;
 }
-.sendBtn {
-    flex-basis: 150px;
+#subBtn {
+    padding: 0;
+}
+#subBtn > button {
+    width: 100%;
+    height: 32px;
+    color: white;
+    border: none;
+    outline: none;
+    background-color: #8ec5fc;
+    border-radius: 3px;
+}
+
+
+
+.comments {
+    margin-top: 25px;
+    padding: 0 20px;
+    clear: both;
     position: relative;
+    top: 24px;
 }
-.sendBtn > button {
-    position: absolute;
-    bottom: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
+.userBB {
+    margin-top: 16px;
 }
 .userData {
     position: relative;
@@ -600,18 +673,6 @@ footer {
     }
     /*  页面与header的交互 */
 
-    /* post评论表单 */
-    .newBB > form {
-        display: block !important;
-    }
-    .sendBtn > button {
-        position: relative !important;
-        bottom: 0 !important;
-        margin: 10px 0;
-    }
-    .newBB > form > div > div {
-        margin: 0;
-    }
     /* 用户评论 */
     .userIcon {
         width: 70px;
@@ -676,4 +737,25 @@ footer {
 @keyframes cbsb {
     0% {transform: rotateY(180deg) ;background-color: transparent}
     100% {transform: rotateY(0);background-color: #E91E63}
+}
+
+/* 搜索结果 */
+.searchData {
+    color: gray;
+}
+.colorHi {
+    width: 100%;
+    height: 3px;
+    background: pink;
+}
+.s-data-card {
+    margin-top: 20px;
+}
+.s-data-card-con {
+    width: 98%;
+    padding: 0 24px !important;
+    padding-bottom: 30px !important;
+    padding-top: 8px !important;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
