--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@ header {
     margin: 0 auto;
     padding: 10px;
     box-sizing: border-box;
-    background: linear-gradient(to right,lightblue,pink);
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
     color: white;
     display: flex;
     text-align: center;
@@ -91,6 +91,7 @@ header {
 }
 .blogBody {
     color: gray;
+    margin-bottom: 50px;
 }
 .vBox {
     width: 90%;
@@ -249,6 +250,7 @@ header {
     align-items: center;
     justify-content: center;
     margin-top: 30px;
+    margin-bottom: 10px;
 }
 .nav {
     background-color: hsla(0,0%,100%,.15);
@@ -635,7 +637,7 @@ footer {
         padding-right: 0 !important;
     }
     .control {
-        min-height: 380px;
+        min-height: 400px;
         border-radius: 0 !important;
         opacity: 1 !important;
     }
@@ -706,6 +708,10 @@ footer {
     }
     .loginBtn > a {
         color: rgba(0,0,0,.45) !important;
+    }
+
+    .comments {
+        padding: 0 12px;
     }
 }
 
