--- a/main.css
+++ b/main.css
@@ -559,9 +559,13 @@ footer {
 .userIcon {
     width: 100px;
     height: 100px;
-    border-radius: 50%;
     position: relative;
-    background: url("img/icon.jpg") no-repeat center / cover;
+}
+.userIcon > img {
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 .userName {
     min-width: 200px;
