--- a/main.css
+++ b/main.css
@@ -679,11 +679,14 @@ footer {
         top: -250px;
         background-color: white !important;
         padding: 0;
-        background: url("img/menuBottom-bg.png") no-repeat bottom / cover;
+        background: url("img/menuBottom-bg.png") no-repeat center -100px / cover;
     }
     #controlBtn {
         background-color: #E91E63;
         display: block !important;
+    }
+    #controlBtn > a > i {
+        color: white;
     }
     /*  页面与header的交互 */
 
