--- a/main.css
+++ b/main.css
@@ -39,15 +39,16 @@ body {
 }
 /* header */
 header {
-    width: 90%;
+    width: 100%;
     position: fixed;
     top: 0;
+    right: 190px;
     min-height: 50px;
-    margin-bottom: 25px;
     box-sizing: border-box;
     background-color: hsla(0,0%,100%,.4);
     box-shadow: 0 1px 2px rgba(0,0,0,.1);
     padding: 0 30px;
+    padding-left: 220px;
     z-index: 99;
 }
 #controlBtn {
@@ -76,7 +77,7 @@ header {
     float: right;
 }
 /* blogBody */
-.nice {
+/*.nice {
     width: 90%;
     min-height: 100px;
     margin: 0 auto;
@@ -88,7 +89,7 @@ header {
     text-align: center;
     align-items: center;
     justify-content: center;
-}
+}*/
 .blogBody {
     color: gray;
     margin-bottom: 50px;
@@ -347,7 +348,6 @@ header {
     min-width: 100%;
     font-size: 0.88em;
     padding: 0;
-    z-index: 1;
 }
 .cat {
     width: 100%;
@@ -679,6 +679,7 @@ footer {
         top: -250px;
         background-color: white !important;
         padding: 0;
+        right: 0;
         background: url("img/menuBottom-bg.png") no-repeat center -100px / cover;
     }
     #controlBtn {
@@ -726,6 +727,12 @@ footer {
     }
     .pageContent > p > img {
         max-width: 100%;
+    }
+
+
+    /*vMenu 移动端适配*/
+    .vMenu {
+        display: none;
     }
 }
 
@@ -787,12 +794,15 @@ footer {
 
 /* 0.1后新增样式 */
 .vMenu {
-    width: 10%;
+    width: 190px;
+    overflow: hidden;
+    min-width: 190px;
     height: 100%;
     box-shadow: 0 0 3px rgba(0,0,0,.15);
     position: fixed;
     right: 0;
     top: 0;
+    z-index: 99;
 }
 .v-menu-assembly-1 {
     width: 100%;
@@ -801,28 +811,79 @@ footer {
     position: relative;
 }
 .Blog-logo {
-    width: 82%;
-    min-height: 160px;
-    position: absolute;
-    bottom: -190px;
-    left: 9%;
+    width: 75%;
+    min-height: 150px;
+    position: relative;
+    left: 12.5%;
+    top: 50%;
 }
 .iam-img {
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
     background: url('img/icon.jpg') no-repeat center / cover;
-    height: 160px;
+    height: 135px;
     border-radius: 5px;
-    box-shadow: 0 0 15px rgba(0,0,0,.1);
+    box-shadow: 0 0 15px rgba(0,0,0,.15);
 }
 .iam-t {
-    width: 100%;
     min-height: 100px;
     box-sizing: border-box;
-    padding: 8px;
     color: gray;
+    margin-top: 10px;
 }
 .v-menu-assembly-2 {
     width: 100%;
     height: 80%;
     background: white;
+}
+.vMenu-onBtn {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    z-index: 100;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.small-vMenu-list {
+    width: 50px;
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+    position: absolute;
+    left: -50px;
+    top: 0;
+    height: 100%;
+    z-index: 99;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.small-vMenu-list > li {
+    width: 50px;
+    height: 50px;
+    list-style: none;
+    line-height: 50px;
+    text-align: center;
+}
+.small-vMenu-list > li > i {
+    color: white;
+}
+.vMenu-onBtn > i {
+    color: white;
+}
+.vMenu-item-list {
+    position: relative;
+    top: 250px;
+    text-align: center;
+}
+.vMenu-item-list > li {
+    width: 100%;
+    height: 40px;
+    color: gray;
+    list-style: none;
+    cursor: pointer;
+    line-height: 40px;
 }
