--- a/main.css
+++ b/main.css
@@ -52,6 +52,8 @@ header {
     z-index: 99;
 }
 #controlBtn {
+    width: 100%;
+    height: 50px;
     display: none;
 }
 #loginOutUrl {
@@ -620,121 +622,6 @@ footer {
         width: 100%;
     }
 }
-@media screen and (max-width: 600px){
-    .pageTag {
-        width: 100% !important;
-    }
-    .vBox {
-        width: 100% !important;
-        padding-bottom: 0 !important;
-    }
-    /* 侧边栏适配方案 */
-    .control {
-        width: 100% !important;
-        padding-bottom: 70px !important;
-    }
-    .blogBody {
-        margin-bottom: 0 !important;
-    }
-    .right-pageTagMenu {
-        padding-left: 0 !important;
-        padding-right: 0 !important;
-    }
-    .blogBody.mdui-container-fluid {
-        padding-left: 0 !important;
-        padding-right: 0 !important;
-    }
-    .control {
-        min-height: 400px;
-        border-radius: 0 !important;
-        opacity: 1 !important;
-    }
-    /* 文章卡片移动端适配 */
-    .pageTag {
-        display: block !important;
-    }
-    .pageTag > div {
-        width: 100% !important;
-    }
-    .hiddenSquare {
-        display: none !important;
-    }
-    .cardImage {
-        min-height: 150px !important;
-    }
-    .cardContent {
-        height: auto !important;
-    }
-    /* header适配方案 */
-    .header-tab-1 > li {
-        float: none !important;
-    }
-    .header-tab-2 {
-        text-align: right;
-        float: none !important;
-    }
-    header {
-        z-index: 99999;
-        position: fixed;
-        top: -250px;
-        background-color: white !important;
-        padding: 0;
-        right: 0;
-        background: url("img/menuBottom-bg.png") no-repeat center -100px / cover;
-    }
-    #controlBtn {
-        background-color: #E91E63;
-        display: block !important;
-    }
-    #controlBtn > a > i {
-        color: white;
-    }
-    /*  页面与header的交互 */
-
-    /* 用户评论 */
-    .userIcon {
-        width: 70px;
-        height: 70px;
-    }
-    .userName {
-        height: 70px;
-    }
-    .name {
-        height: 45px;
-        line-height: 45px;
-    }
-    .Jurisdiction {
-        height: 25px;
-        line-height: 25px;
-    }
-    /* 文章详情 */
-    .taptap > div {
-        width: 100%;
-    }
-    .pageDataRight {
-        float: none;
-        text-align: left;
-    }
-    .loginBtn {
-        background: transparent;
-    }
-    .loginBtn > a {
-        color: rgba(0,0,0,.45) !important;
-    }
-
-    .comments {
-        padding: 0 12px;
-    }
-    .pageContent > p > img {
-        max-width: 100%;
-    }
-
-
-    /*vMenu 移动端适配*/
-    .vMenu {
-        display: none;
-    }
-}
 
 /* animate */
 .menuBackTop {
@@ -758,16 +645,16 @@ footer {
      animation-fill-mode : forwards;
  }
 @keyframes cbss {
-    0% {transform: rotateY(0);background-color: #E91E63}
-    100% {transform: rotateY(180deg) ;background-color: transparent}
+    0% {transform: rotateY(0);background-image: linear-gradient(120deg, #a1c4fd 100%, #c2e9fb 0%);}
+    100% {transform: rotateY(180deg) ;background-image: none}
 }
 .controlBtnSB {
     animation: cbsb 0.45s;
     animation-fill-mode : forwards;
 }
 @keyframes cbsb {
-    0% {transform: rotateY(180deg) ;background-color: transparent}
-    100% {transform: rotateY(0);background-color: #E91E63}
+    0% {transform: rotateY(180deg) ;background-image: none}
+    100% {transform: rotateY(0);background-image: linear-gradient(120deg, #a1c4fd 100%, #c2e9fb 0%);}
 }
 
 /* 搜索结果 */
@@ -886,4 +773,165 @@ footer {
     list-style: none;
     cursor: pointer;
     line-height: 40px;
+}
+
+.mobie-head {
+    display: none;
+    width: 50%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    z-index: 99;
+    color: white;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 50px;
+    text-align: left;
+    box-sizing: border-box;
+    padding: 0 16px;
+}
+
+@media screen and (max-width: 600px){
+    .pageTag {
+        width: 100% !important;
+    }
+    .vBox {
+        width: 100% !important;
+        padding-bottom: 0 !important;
+    }
+    /* 侧边栏适配方案 */
+    .control {
+        width: 100% !important;
+        padding-bottom: 70px !important;
+        min-height: 450px;
+        border-radius: 0 !important;
+        opacity: 1 !important;
+    }
+    .blogBody {
+        margin-bottom: 0 !important;
+    }
+    .right-pageTagMenu {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+    .blogBody.mdui-container-fluid {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+    /* 文章卡片移动端适配 */
+    .pageTag {
+        display: block !important;
+    }
+    .pageTag > div {
+        width: 100% !important;
+    }
+    .hiddenSquare {
+        display: none !important;
+    }
+    .cardImage {
+        min-height: 150px !important;
+    }
+    .cardContent {
+        height: auto !important;
+    }
+    /* header适配方案 */
+    .header-tab-1 > li {
+        float: none !important;
+    }
+    .header-tab-2 {
+        text-align: right;
+        float: none !important;
+    }
+    header {
+        z-index: 1000;
+        position: fixed;
+        top: -250px;
+        background-color: white !important;
+        padding: 0;
+        right: 0;
+        background: url("img/menuBottom-bg.png") no-repeat center -100px / cover;
+    }
+    #controlBtn {
+        box-sizing: border-box;
+        background-image: linear-gradient(120deg, #a1c4fd 100%, #c2e9fb 0%);
+       display: block;
+        padding: 0 12px;
+    }
+    .mb-btn {width: 40px;
+        height: 50px;
+        border: none;
+        background: transparent;
+        outline: none;
+    }
+    .mb-btn > i {
+        color: white;
+    }
+    #controlBtn > i {
+        color: white;
+    }
+    /*  页面与header的交互 */
+
+    /* 用户评论 */
+    .userIcon {
+        width: 70px;
+        height: 70px;
+    }
+    .userName {
+        height: 70px;
+    }
+    .name {
+        height: 45px;
+        line-height: 45px;
+    }
+    .Jurisdiction {
+        height: 25px;
+        line-height: 25px;
+    }
+    /* 文章详情 */
+    .taptap > div {
+        width: 100%;
+    }
+    .pageDataRight {
+        float: none;
+        text-align: left;
+    }
+    .loginBtn {
+        background: transparent;
+    }
+    .loginBtn > a {
+        color: rgba(0,0,0,.45) !important;
+    }
+
+    .comments {
+        padding: 0 12px;
+    }
+    .pageContent > p > img {
+        max-width: 100%;
+    }
+
+
+    /*vMenu 移动端适配*/
+    .mobie-head {
+        display: block;
+    }
+    .vMenu {
+        z-index: 1000;
+        right: -190px;
+        top: 0;
+        visibility: visible;
+    }
+    .vMenu-onBtn {
+        display: none;
+    }
+    body {
+        padding-top: 0;
+    }
+    #body {
+        padding-top: 80px;
+    }
+}
+
+.noAN {
+    transform: none !important;
+    transition: none !important;
 }
