背景图体积压缩以及移动端最新评论显示不完整的修复

--- a/main.css
+++ b/main.css
@@ -374,7 +374,7 @@ header {
 }
 .boaCon {
     width: 100%;
-    max-height: 185Px;
+    min-height: 185Px;
     letter-spacing: 1px;
 }
 .boaCon > ul {
