--- a/main.css
+++ b/main.css
@@ -5,6 +5,9 @@
 h1,h2,h3,h4,h5,h6 {
     font-weight: 300 !important;
 }
+a {
+    text-decoration: none;
+}
 /* alluse */
 .shadow-1 {
     box-shadow: 0 1px 1px rgba(0,0,0,.22);
@@ -499,6 +502,7 @@ footer {
     margin-bottom: 12px;
     height: 42px;
     box-shadow: 0 0 3px rgba(0,0,0,.12);
+    border-radius: 3px;
 }
 .getData-input:after {
     content: '';
@@ -574,6 +578,7 @@ footer {
     padding: 0 6px;
 }
 .nextPrev {
+    min-width: 300px;
     position: absolute;
     right:12px;
     bottom: 12px;
@@ -584,19 +589,15 @@ footer {
     border-radius: 3px;
 }
 .nextPrev > div {
-    min-width: 100px;
+    flex: 1;
     text-align: center;
     padding: 0 12px;
     display: flex;
     align-items: center;
-}.nextPrev > div:first-child:after {
-    content: '';
-    height: 12px;
-    width: 3px;
-    background: pink;
-    position: relative;
-     left:10px;
- }
+    justify-content: center;
+    overflow: hidden;
+    white-space: nowrap;
+}
 .nextPrev > div > i {
     font-size: 22px;
     margin: 0 12px;
@@ -608,6 +609,12 @@ footer {
     text-decoration: none;
     letter-spacing: 1px;
     color: gray;
+}
+#theFlexBor {
+    width: 3px;
+    height: 10px;
+    background: pink;
+    margin: 0 12px;
 }
 .userBB {
     width: 100%;
@@ -823,7 +830,7 @@ footer {
     top: 250px;
     text-align: center;
 }
-.vMenu-item-list > li {
+.vMenu-item-list > a > li {
     width: 100%;
     height: 40px;
     color: gray;
@@ -999,6 +1006,33 @@ footer {
         padding-top: 0;
     }
     #body {
-        padding-top: 50px;
+        padding-top: 60px;
+    }
+    .nextPrev {
+        max-width: 90%;
     }
 }
+
+
+/* pagefile */
+.pagefile-body {
+    color: rgba(0,0,0,.45);
+}
+.pagefile-body li {
+    list-style: none;
+}
+.pf_post_list > li {
+    width: 200px;
+    min-width: 450px;
+    height: 52px;
+    box-sizing: border-box;
+    padding: 12px 24px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    background: white;
+    position: relative;
+    margin: 16px 0;
+    list-style: none;
+}
+
