--- a/main.css
+++ b/main.css
@@ -866,6 +866,49 @@ footer {
     list-style: none;
 }
 
+/* friend-links */
+
+.linksCard {
+    border-radius: 5px;
+    background: white;
+    width: 430px;
+    margin-top: 30px;
+    margin-left: 50px;
+}
+.colorBG {
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+    height: 4px;
+    border-radius: 5px 5px 0 0;
+}
+.linkCon {
+    height: auto;
+    box-sizing: border-box;
+    padding: 12px 16px;
+    color: gray;
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+.links-text {
+    width: auto;
+}
+.linkCon > img {
+    width: 80px;
+    height: 80px;
+    margin-right: 10px;
+    background-color: rgba(0,0,0,.15);
+    border-radius: 50%;
+}
+.blogName {
+    font-size: 20px;
+    line-height: 1.8em;
+    margin-bottom: 3px;
+}
+.blog-emmm {
+    letter-spacing: 1px;
+}
+
+
 @media screen and (max-width: 600px){
     .archives ul {
         padding-left: 0 !important;
